# plugins-workspace

./: .release.toml  Cargo.toml  README.md  justfile
.cargo/: config.toml
.github/: renovate.json
.github/workflows/: contributor.yaml  release.yaml  test.yaml
puniyu_plugin_basic/: CHANGELOG.md  Cargo.toml
puniyu_plugin_basic/src/: lib.rs
puniyu_plugin_basic/src/command/: state.rs
puniyu_plugin_echo/: CHANGELOG.md  Cargo.toml  README.md
puniyu_plugin_echo/src/: echo.rs  lib.rs
