[workspace]
members = ["packages/*"]
resolver = "2"

[workspace.package]
authors = ["wuliya <3369906077@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/puniyu/plugins-workspace"
repository = "https://github.com/puniyu/plugins-workspace"
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies]
thiserror = { version = "2.0.17" }
puniyu_core = { version = "0.6.0" }
puniyu_plugin = { version = "0.6.0" }

[profile.release]
lto = "thin"
incremental = false

[profile.dev]
incremental = true
