[workspace]
members = ["puniyu_plugin_basic", "puniyu_plugin_echo"]
resolver = "2"

[workspace.package]
authors = ["wuliya <3369906077@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/puniyu/plugins-workspace"
repository = "https://github.com/puniyu/plugins-workspace"
edition = "2024"
rust-version = "1.88.0"

[workspace.dependencies]
puniyu_plugin = { version = "0.8.3" }

[profile.release]
lto = "thin"
incremental = false

[profile.dev]
incremental = true
