[package]
name = "puniyu_plugin_basic"
version = "0.8.2"
description = "puniyu basic plugin"
authors.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
puniyu_plugin.workspace = true

puniyu_system_info = { version = "1.5.6" }
