[package]
name = "puniyu_plugin_echo"
version = "0.1.1"
description = "puniyu echo plugin"
authors.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
puniyu_plugin.workspace = true
